--- a/CAB MANAGEMENT SYSTEM/Site1.Master
+++ b/CAB MANAGEMENT SYSTEM/Site1.Master
@@ -31,23 +31,11 @@
    
     <style type="text/css">
         .auto-style1 {
-            width: 1793px;
+            height: 82px;
+            background-color:gold;
         }
-        .auto-style2 {
-            height: 39px;
-          
-        }
-        .auto-style3 {
-            height: 98px;
-            
-        }
-        .auto-style4 {
-            height: 24px;
-        }
-        .auto-style5 {
-            height: 37px;
-           
-            width: 140px;
+        .auto-style6 {
+            width: 1748px;
         }
     </style>
    
@@ -58,45 +46,23 @@
 <body >
     <form id="form1" runat="server">
        <div>
-            <nav class="navbar navbar-expand-1g navbar-light" background-colour="Yellow"> 
+            <nav class="auto-style1"> 
                 <a class="navbar-brand" href="#"> 
                    <img src="imgs/istock.jpg" width="30" height="30" />
                     Cab Management System
                     </a>
-                 
-
-         <button  class="navbar-toggler" type="button" data-toggle="collapse" data-targets="#navbarSupportedContent" 
-             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-             <span class="navbar-toggler-icon"></span>
-             <span class="navbar-toggler-icon"></span>
-             <span class="navbar-toggler-icon"></span>
-         </button>
-
                 <div class="collapse navbar-collapse" id="navbarSupportedContent"> 
                     <ul class="navbar-nav mr-auto"> 
-                        <li class="nav-item active"> 
-                            <a class="nav-link" href="homepage.aspx">Home</a> 
+                        <li class="auto-style6"> 
+                            <a class="nav-link" href="homepage.aspx">Home</a>&nbsp;&nbsp;&nbsp; <a class="nav-link" href="About%20Us.aspx">About Us</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            <asp:LinkButton class="nav-link" ID="LinkButton1" runat="server" OnClick="LinkButton1_Click" >User Login</asp:LinkButton>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+                             <asp:LinkButton class="nav-link" ID="LinkButton2" runat ="server" OnClick="LinkButton2_Click">User Registration </asp:LinkButton>
+                          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+                               <asp:LinkButton class="nav-link" ID="LinkButton3" runat ="server" OnClick="LinkButton3_Click">Logout </asp:LinkButton>
                         </li>
-                        <li class="nav-item active"> 
-                            <a class="nav-link" href="About%20Us.aspx">About Us</a> 
-                        </li> 
 
                     </ul>
-
-                       <ul class="navbar-nav navbar navbar-right">
-                          
-                          <li class="nav-item active">
-                          <asp:LinkButton class="nav-link" ID="LinkButton1" runat="server" OnClick="LinkButton1_Click" >User Login</asp:LinkButton>
-                          </li> 
-
-                          <li class="nav-item active"> 
-                             <asp:LinkButton class="nav-link" ID="LinkButton2" runat ="server" OnClick="LinkButton2_Click">User Registration </asp:LinkButton>
-                          </li> 
-                          <li class="nav-item active"> 
-                               <asp:LinkButton class="nav-link" ID="LinkButton3" runat ="server" OnClick="LinkButton3_Click">Logout </asp:LinkButton>
-                           </li> 
- 
-                       </ul>
              </div>
           </nav>
         </div>
